[package]
authors = ["panicbit <panicbit.dev@gmail.com>"]
name = "aocl"
version = "0.1.0"

[dependencies]
chrono-humanize = "0.0.10"
chrono-tz = "0.4.1"
failure = "0.1.1"
itertools = "0.7.3"
lazy_static = "1.0.0"
reqwest = "0.8.1"
structopt = "0.1.6"
structopt-derive = "0.1.6"
term-painter = "0.2.4"

[dependencies.aoc]
git = "https://github.com/panicbit/aoc"
rev = "60009b73"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dependencies.preferences]
git = "https://github.com/Eh2406/preferences-rs"
rev = "4f426cf"
version = "2.0.0"
