[package]
authors = ["panicbit <panicbit.dev@gmail.com>"]
name = "aocl"
version = "0.1.0"

[dependencies]
chrono-humanize = "0.0.11"
chrono-tz = "0.5.0"
clap = "2.32.0"
failure = "0.1.3"
itertools = "0.7.9"
lazy_static = "1.2.0"
reqwest = "0.9.5"
structopt-derive = "0.2.13"
term-painter = "0.2.4"

[dependencies.aoc]
git = "https://github.com/panicbit/aoc"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"

[dependencies.preferences]
git = "https://github.com/Eh2406/preferences-rs"
rev = "4f426cf"
version = "2.0.0"
