[package]
authors = ["panicbit <panicbit.dev@gmail.com>"]
name = "aocl"
description = "Advent of code leaderboard viewer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/panicbit/aocl"
version = "0.1.1"

[dependencies]
chrono-humanize = "0.0.11"
chrono-tz = "0.5.0"
clap = "2.32.0"
failure = "0.1.3"
itertools = "0.7.9"
lazy_static = "1.2.0"
reqwest = "0.9.5"
structopt-derive = "0.2.13"
term-painter = "0.2.4"
aoc = "0.3.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"
